--- a/frontend/src/styles/SmFeatures2.css
+++ b/frontend/src/styles/SmFeatures2.css
@@ -3,7 +3,7 @@
   justify-content: space-between;
   flex-direction: row;
   margin: 216px 72px;
-  font-family: 'Playfair';
+  font-family: 'Playfair display';
 }
 .frame-child-2 {
   /* position: relative; */
