--- a/frontend/src/styles/Footer.css
+++ b/frontend/src/styles/Footer.css
@@ -1,7 +1,7 @@
 .footer {
   background-color: #9f8ea2;
   position: relative;
-  padding: 32px 0px 26px;
+  padding: 44px 60px 0px 0;
   gap: 100px;
   width: 100vw;
   height: 235px;
@@ -19,13 +19,8 @@
   line-height: 19px;
   letter-spacing: 0.03em;
   color: #000;
-  height: 60px;
+  width: 100vw;
 }
-
-/* .row {
-  padding-top: 40px;
-  padding-bottom: 40px;
-} */
 
 .footer-container i:hover {
   color: #c9c6d7;
@@ -33,14 +28,15 @@
 }
 
 .footer-line {
-  width: 100%;
+  width: 100vw;
+  margin-top: 20px;
   height: 1px;
   background-color: #000;
 }
 
-.footer-text {
-  margin-top: 10px;
-}
+/* .footer-text {
+  margin-top: 5px;
+} */
 
 .subscribe-popup-overlay {
   display: flex;
@@ -75,10 +71,10 @@
 }
 
 .logo {
-  height: 110px;
-  width: 153.69px;
-  margin-left: 25%;
-  /* margin-top: 10%; */
+  height: 100px;
+  width: 140px;
+  margin-left: 30px;
+  margin-top: 5px;
   color: #000;
   left: 0px;
   top: 0px;
