small fixes, phone,navbar,camera etc

--- a/frontend/src/styles/Footer.css
+++ b/frontend/src/styles/Footer.css
@@ -4,7 +4,8 @@
   padding: 44px 60px 0px 0;
   gap: 100px;
   width: 100vw;
-  height: 235px;
+  min-height: 235px;
+  height: fit-content;
 }
 
 .footer-container {
