--- a/frontend/src/styles/Phone.css
+++ b/frontend/src/styles/Phone.css
@@ -1,289 +1,326 @@
-        .hidden-box {
-            width: 100vw;
-            /* height: 970px; */
-            display: flex;
-            flex-direction: row;
-            justify-content: space-between;
-            align-items: center;
-            padding: 0;
-        }
+.hidden-box {
+  width: 100vw;
+  /* height: 970px; */
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0;
+}
 
-        .hidden-content {
-            width: 614px;
-            /* height: 100%; */
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: flex-start;
-            padding: 0 188px;
-        }
+.hidden-content {
+  width: 614px;
+  /* height: 100%; */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  padding: 0 188px;
+}
 
-        .heading-text {
-            font-family: 'Playfair Display';
-            font-style: normal;
-            font-weight: 500;
-            font-size: 56px;
-            line-height: 67px;
-            text-align: center;
-            letter-spacing: 0.04em;
-            text-transform: uppercase;
-            color: #000000;
-        }
+.heading-text {
+  font-family: 'Playfair Display';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 56px;
+  line-height: 67px;
+  text-align: center;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  color: #000000;
+  margin-bottom: 64px;
+}
 
-        .beeauty-line {
-            font-family: 'Roboto';
-            font-style: normal;
-            font-weight: 400;
-            font-size: 16px;
-            line-height: 21px;
-            text-align: center;
-            letter-spacing: 0.03em;
-            color: #000000;
-        }
-        /* Telefonen VR */
+.beeauty-teext {
+  margin-bottom: 64px;
+}
 
-        .container {
-            display: flex;
-            flex-direction: row-reverse;
-        }
+.beeauty-line {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 21px;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #000000;
+}
+/* Telefonen VR */
 
-        .phone {
-            position: relative;
-            width: 450px;
-            height: 683.9px;
-            flex-grow: 0;
-            margin-left: auto;
-            margin-left: 50px;
-            /* Justera för att flytta telefonen från texten */
-            margin-top: 90px;
-            padding: 20px;
-            background: #705D67;
-            box-shadow: 49.455px 324.99px 131.88px rgba(0, 0, 0, 0.01), 28.26px 183.69px 110.685px rgba(0, 0, 0, 0.05), 11.775px 82.425px 82.425px rgba(0, 0, 0, 0.09), 2.355px 21.195px 44.745px rgba(0, 0, 0, 0.1), 0px 0px 0px rgba(0, 0, 0, 0.1);
-            border-radius: 89.0079px;
-        }
+.container {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: center;
+  padding-top: 88.1px;
+}
 
-        .screen {
-            box-sizing: border-box;
-            position: absolute;
-            top: 0px;
-            width: 100%;
-            height: 80%;
-            border-radius: 89.0079px;
-            overflow: hidden;
-            position: relative;
-            box-shadow: inset 30px 30px 10px 10px rgba(240, 240, 240, 0.4);
-            filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25)) drop-shadow(0px 56.6375px 16.0062px rgba(240, 240, 240, 0.01)) drop-shadow(0px 35.7062px 14.775px rgba(240, 240, 240, 0.01)) drop-shadow(0px 19.7px 12.3125px rgba(240, 240, 240, 0.05)) drop-shadow(0px 8.61875px 8.61875px rgba(240, 240, 240, 0.09)) drop-shadow(0px 2.4625px 4.925px rgba(240, 240, 240, 0.1));
-        }
+.text-container {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
 
-        .phone-screen {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
-        /* slut telefon */
-        /* KNAPPARNA TILL TELEFONEN */
+.phone {
+  position: relative;
+  width: 450px;
+  height: 683.9px;
+  flex-grow: 0;
+  /* margin-left: auto; */
+  margin-left: 90px;
+  /* Justera för att flytta telefonen från texten */
+  margin-top: 50px;
+  padding: 20px;
+  background: #705d67;
+  box-shadow: 49.455px 324.99px 131.88px rgba(0, 0, 0, 0.01),
+    28.26px 183.69px 110.685px rgba(0, 0, 0, 0.05),
+    11.775px 82.425px 82.425px rgba(0, 0, 0, 0.09),
+    2.355px 21.195px 44.745px rgba(0, 0, 0, 0.1), 0px 0px 0px rgba(0, 0, 0, 0.1);
+  border-radius: 89.0079px;
+}
 
-        .round-button svg {
-            width: 20px;
-            height: 20px;
-            color: #0a0707;
-        }
+.screen {
+  box-sizing: border-box;
+  position: absolute;
+  top: 0px;
+  width: 100%;
+  height: 80%;
+  border-radius: 89.0079px;
+  overflow: hidden;
+  position: relative;
+  box-shadow: inset 30px 30px 10px 10px rgba(240, 240, 240, 0.4);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25))
+    drop-shadow(0px 56.6375px 16.0062px rgba(240, 240, 240, 0.01))
+    drop-shadow(0px 35.7062px 14.775px rgba(240, 240, 240, 0.01))
+    drop-shadow(0px 19.7px 12.3125px rgba(240, 240, 240, 0.05))
+    drop-shadow(0px 8.61875px 8.61875px rgba(240, 240, 240, 0.09))
+    drop-shadow(0px 2.4625px 4.925px rgba(240, 240, 240, 0.1));
+}
 
-        .camera-button:hover {
-            background-color: #D9D9D9;
-        }
+.phone-screen {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+/* slut telefon */
+/* KNAPPARNA TILL TELEFONEN */
 
-        .round-button:hover {
-            background-color: #EEE565;
-        }
+.round-button svg {
+  width: 20px;
+  height: 20px;
+  color: #0a0707;
+}
 
-        .camera-button svg {
-            color: #9d9696;
-            width: 66.8px;
-            height: 65px;
-        }
+.camera-button:hover {
+  background-color: #d9d9d9;
+}
 
-        .hidden-box {
-            transition: opacity 0.3s ease;
-            opacity: 0;
-        }
+.round-button:hover {
+  background-color: #eee565;
+}
 
-        .hidden-box.show {
-            opacity: 1;
-        }
+.camera-button svg {
+  color: #9d9696;
+  width: 66.8px;
+  height: 65px;
+}
 
-        .half-circle {
-            transition: opacity 0.3s ease;
-            opacity: 0;
-        }
+.hidden-box {
+  transition: opacity 0.3s ease;
+  opacity: 0;
+}
 
-        .half-circle.show {
-            opacity: 1;
-        }
+.hidden-box.show {
+  opacity: 1;
+}
 
-        .container {
-            position: relative;
-        }
+.half-circle {
+  transition: opacity 0.3s ease;
+  opacity: 0;
+}
 
-        .screen {
-            position: relative;
-        }
+.half-circle.show {
+  opacity: 1;
+}
 
-        .half-circle {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            position: relative;
-            width: 250px;
-            height: 75px;
-            background: rgba(217, 217, 217, 0.5);
-            border-width: 2.355px 2.355px 0px 2.355px;
-            border-style: solid;
-            border-color: rgba(0, 0, 0, 0.1);
-            border-radius: 353.25px 353.25px 0px 0px;
-            overflow: hidden;
-        }
+/* .container {
+  position: relative;
+} */
 
-        .round-button {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            width: 42px;
-            height: 42px;
-            background: rgba(217, 217, 217, 0.5);
-            border-radius: 50%;
-            color: rgba(0, 0, 0, 0.6);
-            margin-left: 20px;
-            margin-right: 20px;
-            margin-top: 10px;
-            transition: background-color 0.3s ease;
-        }
+.screen {
+  position: relative;
+}
 
-        .person-icon {
-            position: relative;
-            top: -15px;
-            left: 20px;
-            transform: translateX(-50%);
-            border-radius: 50%;
-        }
+.half-circle {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  width: 250px;
+  height: 75px;
+  background: rgba(217, 217, 217, 0.5);
+  border-width: 2.355px 2.355px 0px 2.355px;
+  border-style: solid;
+  border-color: rgba(0, 0, 0, 0.1);
+  border-radius: 353.25px 353.25px 0px 0px;
+  overflow: hidden;
+}
 
-        .camera-button {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            width: 70px;
-            height: 60px;
-            padding: 14.7px 15.9px 14.1px 17px;
-            transform: rotate(-90.29deg);
-            box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.6), 0 1.2px 2.4px 0 rgba(0, 0, 0, 0.59), 0 4.2px 4.2px 0 rgba(0, 0, 0, 0.51), 0 9px 5.4px 0 rgba(0, 0, 0, 0.3), 0 16.3px 6.6px 0 rgba(0, 0, 0, 0.09), 0 25.3px 7.2px 0 rgba(0, 0, 0, 0.01);
-            background-color: #705d67;
-            border-radius: 50%;
-            position: absolute;
-            bottom: 30px;
-            left: 50%;
-            transform: translateX(-50%);
-            transition: transform 0.3s ease;
-        }
+.round-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 42px;
+  height: 42px;
+  background: rgba(217, 217, 217, 0.5);
+  border-radius: 50%;
+  color: rgba(0, 0, 0, 0.6);
+  margin-left: 20px;
+  margin-right: 20px;
+  margin-top: 10px;
+  transition: background-color 0.3s ease;
+}
 
-        .camera-button.show {
-            transform: translateX(-50%) translateY(-75px);
-        }
+.person-icon {
+  position: relative;
+  top: -15px;
+  left: 20px;
+  transform: translateX(-50%);
+  border-radius: 50%;
+}
 
-        .half-circle.show {
-            margin-bottom: 50px;
-        }
+.camera-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 70px;
+  height: 60px;
+  padding: 14.7px 15.9px 14.1px 17px;
+  transform: rotate(-90.29deg);
+  box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.6), 0 1.2px 2.4px 0 rgba(0, 0, 0, 0.59),
+    0 4.2px 4.2px 0 rgba(0, 0, 0, 0.51), 0 9px 5.4px 0 rgba(0, 0, 0, 0.3),
+    0 16.3px 6.6px 0 rgba(0, 0, 0, 0.09), 0 25.3px 7.2px 0 rgba(0, 0, 0, 0.01);
+  background-color: #705d67;
+  border-radius: 50%;
+  position: absolute;
+  bottom: 30px;
+  left: 50%;
+  transform: translateX(-50%);
+  transition: transform 0.3s ease;
+}
 
-        .container {
-            position: relative;
-        }
+.camera-button.show {
+  transform: translateX(-50%) translateY(-75px);
+}
 
-        .buttons {
-            display: flex;
-            justify-content: center;
-            position: absolute;
-            bottom: -10px;
-            left: 50%;
-            transform: translateX(-50%);
-            margin-bottom: 30px;
-            color: #fff;
-        }
-        /* CIRKLARNA MED TEXT */
+.half-circle.show {
+  margin-bottom: 50px;
+}
+/*
+.container {
+  position: relative;
+} */
 
-        .circle-row {
-            display: flex;
-            justify-content: flex-start;
-            margin-bottom: 20px;
-        }
+.buttons {
+  display: flex;
+  justify-content: center;
+  position: absolute;
+  bottom: -10px;
+  left: 50%;
+  transform: translateX(-50%);
+  margin-bottom: 30px;
+  color: #fff;
+}
+/* CIRKLARNA MED TEXT */
 
-        .circle {
-            border-radius: 50%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-family: 'Playfair Display';
-            font-style: normal;
-            font-weight: 800;
-            font-size: 24px;
-            line-height: 116.3%;
-            text-align: center;
-            letter-spacing: 0.035em;
-            color: #000000;
-        }
+.circle-row {
+  display: flex;
+  justify-content: flex-start;
+  margin-bottom: 64px;
+}
 
-        .circle-selfie {
-            width: 165.7px;
-            height: 165.7px;
-            flex-grow: 0;
-            margin: 0 10px 0.5px 0;
-            box-shadow: 0px 53.5546px 22.1605px rgba(0, 0, 0, 0.01), 0px 29.5474px 18.4671px rgba(0, 0, 0, 0.05), 0px 12.927px 12.927px rgba(0, 0, 0, 0.09), 0px 3.69342px 7.38685px rgba(0, 0, 0, 0.1), 0px 0px 0px rgba(0, 0, 0, 0.1);
-        }
+.circle {
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: 'Playfair Display';
+  font-style: normal;
+  font-weight: 800;
+  font-size: 24px;
+  line-height: 116.3%;
+  text-align: center;
+  letter-spacing: 0.035em;
+  color: #000000;
+}
 
-        .circle-shades {
-            width: 165.7px;
-            height: 165.7px;
-            flex-grow: 0;
-            margin: 0.5px 0 0 100px;
-            box-shadow: 0px 53.5546px 22.1605px rgba(0, 0, 0, 0.01), 0px 29.5474px 18.4671px rgba(0, 0, 0, 0.05), 0px 12.927px 12.927px rgba(0, 0, 0, 0.09), 0px 3.69342px 7.38685px rgba(0, 0, 0, 0.1), 0px 0px 0px rgba(0, 0, 0, 0.1);
-        }
+.circle-selfie {
+  width: 165.7px;
+  height: 165.7px;
+  flex-grow: 0;
+  /* margin: 0 0 0.5px 0; */
+  box-shadow: 0px 53.5546px 22.1605px rgba(0, 0, 0, 0.01),
+    0px 29.5474px 18.4671px rgba(0, 0, 0, 0.05),
+    0px 12.927px 12.927px rgba(0, 0, 0, 0.09),
+    0px 3.69342px 7.38685px rgba(0, 0, 0, 0.1), 0px 0px 0px rgba(0, 0, 0, 0.1);
+}
 
-        .circle-shot {
-            width: 165.7px;
-            height: 165.7px;
-            flex-grow: 0;
-            margin: 0 103.5px 0 0;
-            box-shadow: 0px 53.5546px 22.1605px rgba(0, 0, 0, 0.01), 0px 29.5474px 18.4671px rgba(0, 0, 0, 0.05), 0px 12.927px 12.927px rgba(0, 0, 0, 0.09), 0px 3.69342px 7.38685px rgba(0, 0, 0, 0.1), 0px 0px 0px rgba(0, 0, 0, 0.1);
-        }
+.circle-shades {
+  width: 165.7px;
+  height: 165.7px;
+  flex-grow: 0;
+  margin: 0 0 0 103.5px;
+  box-shadow: 0px 53.5546px 22.1605px rgba(0, 0, 0, 0.01),
+    0px 29.5474px 18.4671px rgba(0, 0, 0, 0.05),
+    0px 12.927px 12.927px rgba(0, 0, 0, 0.09),
+    0px 3.69342px 7.38685px rgba(0, 0, 0, 0.1), 0px 0px 0px rgba(0, 0, 0, 0.1);
+}
 
-        .circle-inbox {
-            width: 165.7px;
-            height: 165.7px;
-            flex-grow: 0;
-            box-shadow: 0px 53.5546px 22.1605px rgba(0, 0, 0, 0.01), 0px 29.5474px 18.4671px rgba(0, 0, 0, 0.05), 0px 12.927px 12.927px rgba(0, 0, 0, 0.09), 0px 3.69342px 7.38685px rgba(0, 0, 0, 0.1), 0px 0px 0px rgba(0, 0, 0, 0.1);
-        }
-        /* 6 foton */
+.circle-shot {
+  width: 165.7px;
+  height: 165.7px;
+  flex-grow: 0;
+  margin: 0 103.5px 0 0;
+  box-shadow: 0px 53.5546px 22.1605px rgba(0, 0, 0, 0.01),
+    0px 29.5474px 18.4671px rgba(0, 0, 0, 0.05),
+    0px 12.927px 12.927px rgba(0, 0, 0, 0.09),
+    0px 3.69342px 7.38685px rgba(0, 0, 0, 0.1), 0px 0px 0px rgba(0, 0, 0, 0.1);
+}
 
-        #my-custom-heading {
-            text-align: center;
-            padding-top: 150px;
-            margin: 20px 0;
-            /* Justera margin-värdet för att placera texten närmare bilderna */
-        }
+.circle-inbox {
+  width: 165.7px;
+  height: 165.7px;
+  flex-grow: 0;
+  box-shadow: 0px 53.5546px 22.1605px rgba(0, 0, 0, 0.01),
+    0px 29.5474px 18.4671px rgba(0, 0, 0, 0.05),
+    0px 12.927px 12.927px rgba(0, 0, 0, 0.09),
+    0px 3.69342px 7.38685px rgba(0, 0, 0, 0.1), 0px 0px 0px rgba(0, 0, 0, 0.1);
+}
+/* 6 foton */
 
-        .phone-images-container {
-            display: flex;
-            justify-content: center;
-            flex-wrap: wrap;
-            margin: 10px 0;
-            /* Justera margin-värdet för att placera bilderna närmare texten */
-        }
+#my-custom-heading {
+  text-align: center;
+  padding-top: 150px;
+  margin: 20px 0;
+  /* Justera margin-värdet för att placera texten närmare bilderna */
+}
 
-        .phone-image {
-            margin: 20px;
-            /* Uppdaterar margin för att skapa avstånd mellan komponenterna */
-        }
+.phone-images-container {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin: 10px 0;
+  /* Justera margin-värdet för att placera bilderna närmare texten */
+}
 
-        .phone-image img {
-            width: 375.1px;
-            height: 299.7px;
-            box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.1), 0 1.7px 3.4px 0 rgba(0, 0, 0, 0.1), 0 6px 6px 0 rgba(0, 0, 0, 0.09), 0 13.7px 8.6px 0 rgba(0, 0, 0, 0.05), 0 24.8px 10.3px 0 rgba(0, 0, 0, 0.01), 0 39.4px 11.1px 0 rgba(0, 0, 0, 0);
-        }
+.phone-image {
+  margin: 20px;
+  /* Uppdaterar margin för att skapa avstånd mellan komponenterna */
+}
+
+.phone-image img {
+  width: 375.1px;
+  height: 299.7px;
+  box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.1), 0 1.7px 3.4px 0 rgba(0, 0, 0, 0.1),
+    0 6px 6px 0 rgba(0, 0, 0, 0.09), 0 13.7px 8.6px 0 rgba(0, 0, 0, 0.05),
+    0 24.8px 10.3px 0 rgba(0, 0, 0, 0.01), 0 39.4px 11.1px 0 rgba(0, 0, 0, 0);
+}
