--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -143,6 +143,13 @@ body {
   overflow-x: hidden;
 }
 
+h1,
+h2,
+h3,
+h4 {
+  font-family: 'playfair display';
+}
+
 .view-divs {
   height: fit-content;
   min-height: 950px;
