--- a/frontend/src/styles/Phone.css
+++ b/frontend/src/styles/Phone.css
@@ -1,3 +1,9 @@
+.carousel-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .hidden-box {
   width: 100vw;
   /* height: 970px; */
@@ -238,6 +244,31 @@
 .retake-icon svg {
   height: 40px;
   width: 40px;
+}
+
+.on-off-container {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 20px;
+}
+
+.on-off:hover {
+  color: var(--sunglow);
+}
+.on-off {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 14.7px 15.9px 14.1px 17px;
+  background-color: var(--prune);
+  border-radius: 100%;
+  cursor: pointer;
+  width: 60px;
+  height: 60px;
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.1),
+    0px 2px 4px 0px rgba(0, 0, 0, 0.1), 0px 7px 7px 0px rgba(0, 0, 0, 0.09),
+    0px 16px 10px 0px rgba(0, 0, 0, 0.05), 0px 29px 12px 0px rgba(0, 0, 0, 0.01),
+    0px 46px 13px 0px rgba(0, 0, 0, 0);
 }
 
 .camera-button {
