--- a/frontend/src/styles/About.css
+++ b/frontend/src/styles/About.css
@@ -62,6 +62,12 @@
   overflow: hidden;
   flex-shrink: 0;
   object-fit: cover;
+
+  /* max-width: 100%;
+  max-height: 100%;
+  width: auto;
+  height: auto;
+  object-fit: contain; */
 }
 .sustainabilitypicture {
   display: flex;
@@ -140,16 +146,15 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  /* padding: 144px 153px; */
+  padding: 144px 153px;
   gap: 10px;
   margin-bottom: 44px;
-  height: 1517px;
-  width: 100vw;
+  width: 100%;
 
   background: #ebe6e0;
 
   flex: none;
-  order: 3;
+  order: 0;
   flex-grow: 0;
 
   text-align: left;
@@ -170,3 +175,150 @@
   color: var(--suave);
   font-family: var(--outon-button-text);
 } */
+
+
+@media (max-width: 1120px) {
+
+  .about-section{
+    width: 100%;
+  }
+
+  .aboutinnerframe {
+    padding: 24px;
+  }
+  .innerframefeatures {
+    gap: 32px;
+  }
+  .sustainabilitypicture {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 16px;
+    text-align: center;
+  }
+  .sustainabilitytext,
+  .durabilitytext {
+    width: 100%;
+    text-align: center;
+  }
+  .pic-about-substainability-icon {
+    width: 300;
+    height: 300;
+    object-fit: contain;
+  }
+
+
+  .sustainabilitycontent,
+  .durabilitycontent {
+    align-items: center;
+  }
+  .buttonseespecs,
+  .buttonexplore {
+    width: 100%;
+  }
+}
+
+@media (max-width: 700px) {
+  .about-section {
+    align-items: center;
+    padding: 20px 20px;
+  }
+  .aboutinnerframe {
+    width: 100%;
+    padding: 24px;
+  }
+  .innerframefeatures {
+    width: 100%;
+    gap: 32px;
+  }
+
+  .sustainabilitypicture {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 16px;
+    text-align: center;
+  }
+  .sustainabilitytext,
+  .durabilitytext {
+    width: 100%;
+    text-align: center;
+  }
+  .pic-about-substainability-icon {
+    max-width: 300px;
+    max-height: 300px;
+    object-fit: contain;
+  }
+
+}
+
+@media (max-width: 500px) {
+  .about-section {
+    align-items: center;
+    padding: 20px 20px;
+  }
+  .aboutinnerframe {
+    width: 100%;
+    padding: 24px;
+  }
+  .innerframefeatures {
+    max-width: 300px;
+    gap: 32px;
+  }
+
+  .sustainabilitypicture{
+    width: 100%;
+  }
+
+  .sustainabilitycontent {
+    width: 100%;
+    text-align: center;
+  }
+
+  .sustainabilitypicture {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 16px;
+    text-align: center;
+  }
+  .sustainabilitytext,
+  .durabilitytext {
+    max-width: 100%;
+    text-align: center;
+  }
+  .pic-about-substainability-icon {
+    max-width: 200px;
+    max-height: 200px;
+    object-fit: contain;
+  }
+
+  .our-sustainability, .our-durability {
+    align-items: center;
+    text-align: center;
+font-family: 'Playfair Display';
+font-style: normal;
+font-weight: 500;
+font-size: 24px;
+line-height: 32px;
+text-align: center;
+letter-spacing: 0.04em;
+  }
+
+  /* .our-durability {
+    align-items: center;
+    text-align: center;
+font-family: 'Playfair Display';
+font-style: normal;
+font-weight: 500;
+font-size: 24px;
+line-height: 32px;
+text-align: center;
+letter-spacing: 0.04em;
+  } */
+
+  .each-year-we {
+    width: 100%;
+  }
+
+}
